# excelebration

./: .gitignore  README.md  project.clj
client/: package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: index.ts  types.ts
client/src/__tests__/: clipboard.test.ts  commands.test.ts  filter.test.ts  reducer.test.ts  validation.test.ts
client/src/components/: Cell.tsx  CellEditor.tsx  HeaderFilter.tsx  HeaderRow.tsx  Row.tsx  SheetGrid.tsx  SheetProvider.tsx  SheetStatusBar.tsx  SheetToolbar.tsx  VirtualRows.tsx
client/src/core/: arrowLoader.ts  arrowSync.ts  clipboard.ts  commands.ts  filter.ts  reducer.ts  schema.ts  sync.ts  validation.ts
client/src/hooks/: useCellEdit.ts  useClipboard.ts  useColumnResize.ts  useFilter.ts  useKeyboard.ts  useSelection.ts  useServerLoad.ts  useSheet.ts  useSheetReducer.ts  useVirtualRows.ts
dev-resources/: gfm.md  template.clj  test2.md
examples/employees-frontend/: .env.local.example  index.html  package-lock.json  package.json  vite.config.ts
examples/employees-frontend/src/: App.tsx  index.css
examples/employees-server/: Cargo.toml
examples/employees-server/src/: main.rs
server/: Cargo.toml  Dockerfile  docker-compose.yml
server/crates/excelebration-core/: Cargo.toml
server/crates/excelebration-server/: Cargo.toml
server/crates/excelebration-server/src/: lib.rs
server/crates/excelebration-server/src/arrow_util/: reader.rs  writer.rs
server/crates/excelebration-server/src/transport/: mod.rs  rows.rs  server.rs  sync.rs
src/clj/excelebration/: core.clj  macros.clj  publish.clj
(+7 files in other folders)
