[package]
name = "excelebration-employees"
version = "0.1.0"
edition = "2021"

[dependencies]
excelebration-server = { path = "../../server/crates/excelebration-server" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
arrow-array = "55"
arrow-schema = "55"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
