[package]
name = "excelebration-server"
version = "0.1.0"
edition = "2021"

[dependencies]
excelebration-core = { path = "../excelebration-core" }
tokio = { version = "1", features = ["full"] }
quinn = { version = "0.11", default-features = false, features = ["rustls-ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rcgen = { version = "0.13", features = ["x509-parser"] }
time = "0.3"
x509-parser = "0.16"
web-transport-quinn = { version = "0.11", default-features = false, features = ["ring"] }
http = "1"
bytes = "1"
anyhow = "1"
arrow = { version = "55", features = ["ipc"] }
arrow-ipc = "55"
arrow-array = "55"
arrow-schema = "55"
tracing = "0.1"
ring = "0.17"
serde_json = "1"
url = "2"
